resources/css/theme.css
@import 'tailwindcss';

@config '../../tailwind.config.ts';

@layer base {
    body {
        --color-scrollbar-thumb: #8a8a8a;
        --color-scrollbar-thumb-hover: #636363;
    }

    .dark body {
        --color-scrollbar-thumb: #9e9e9e;
        --color-scrollbar-thumb-hover: #d0d0d0;
    }

    #root {
        --color-scrollbar-track: rgb(212 212 212 / var(--tw-bg-opacity, 1));
    }

    .dark #root {
        --color-scrollbar-track: rgb(38 38 38 / var(--tw-bg-opacity, 1));
    }

    .transition-input {
        transition-property:
            /* color, */
            /* background-color, */
            /* border-color, */
            outline-color,
            text-decoration-color,
            fill,
            stroke,
            --tw-gradient-from,
            --tw-gradient-via,
            --tw-gradient-to,
            opacity,
            box-shadow,
            transform,
            translate,
            scale,
            rotate,
            filter,
            -webkit-backdrop-filter,
            backdrop-filter,
            display,
            content-visibility,
            overlay,
            pointer-events;
        transition-timing-function: var(--tw-ease, var(--default-transition-timing-function) /* cubic-bezier(0.4, 0, 0.2, 1) */);
        transition-duration: var(--tw-duration, var(--duration-input) /* 150ms */);
    }

    .duration-input {
        --tw-duration: var(--duration-input) /* 200ms */;
    }
}

@layer utilities {
    input[type='number']::-webkit-inner-spin-button,
    input[type='number']::-webkit-outer-spin-button {
        -webkit-appearance: none;
        margin: 0;
    }

    input[type='number'] {
        appearance: textfield;
    }

    @supports not selector(::-webkit-scrollbar) {
        .scrollbar-minimal .dark {
            scrollbar-color: color-mix(in srgb, var(--color-scrollbar-thumb) calc(var(--scrollbar-opacity, 1) * 100%), transparent)
                color-mix(in srgb, var(--color-scrollbar-track) calc(var(--scrollbar-opacity, 1) * 100%), transparent);
        }
        /* This is very weird on firefox */
    }

    @supports selector(::-webkit-scrollbar) {
        .scrollbar-minimal::-webkit-scrollbar {
            width: var(--default-scrollbar-width);
            height: var(--default-scrollbar-width);
        }

        .scrollbar-minimal::-webkit-scrollbar-track {
            background: color-mix(in srgb, var(--color-scrollbar-track) calc(var(--scrollbar-opacity, 1) * 100%), transparent);
            border-radius: 9999px;
        }

        .scrollbar-minimal::-webkit-scrollbar-thumb {
            background: color-mix(in srgb, var(--color-scrollbar-thumb) calc(var(--scrollbar-opacity, 1) * 100%), transparent);
            border-radius: 9999px;
        }

        .scrollbar-minimal::-webkit-scrollbar-thumb:hover {
            background: var(--color-scrollbar-thumb-hover);
        }

        .scrollbar-minimal.scrollbar-hover::-webkit-scrollbar {
            /* Instead of setting width and height to 0, set opacity to 0 */
            --scrollbar-opacity: 0;
        }

        .group:hover .scrollbar-minimal.scrollbar-hover::-webkit-scrollbar,
        .scrollbar-minimal.scrollbar-hover::-webkit-scrollbar:hover {
            --scrollbar-opacity: 1;
        }
    }
}

@layer components {
    /* PULSE */
    @keyframes detect-scroll {
        from,
        to {
            --can-scroll: ;
        }
    }

    /* For video popover which is always dark */
    .scrollbar-dark {
        --color-scrollbar-track: rgb(38 38 38 / var(--tw-bg-opacity, 1)) !important;
        --color-scrollbar-thumb: rgba(158, 158, 158, var(--scrollbar-opacity, 1)) !important;
        --color-scrollbar-thumb-hover: rgba(208, 208, 208, var(--scrollbar-opacity, 1)) !important;
    }

    .supports-scrollbars {
        animation: detect-scroll linear;
        animation-timeline: scroll(self);

        padding-right: var(--can-scroll) --spacing(3);
    }

    /* Range Inputs */
    .slider {
        --thumb-size: 2;
        --thumb-rounded: 9999px;
        --track-color: rgba(255, 255, 255, 0.3);
        --track-rounded: 9999px;
        --progress-color: #111827;
        --buffer-color: rgba(255, 255, 255, 0.3);
        --thumb-color: #ffffff;
        --buffer: 0;

        appearance: none;
        cursor: pointer;
        overflow: hidden;

        background-color: var(--track-color);
        border-radius: var(--track-rounded);

        transition:
            height 200ms ease-in-out,
            border-radius 200ms ease-in-out,
            margin 200ms ease-in-out;
        will-change: transform;
    }

    .slider.volume {
        --progress-color: var(--color-primary);

        &:active {
            --progress-color: var(--color-primary-active);
        }
    }

    .slider.timeline {
        --thumb-size: 1;
        height: calc(var(--thumb-size) * 0.25rem);
        margin-top: calc(var(--thumb-size) * 0.125rem);
        margin-bottom: calc(var(--thumb-size) * 0.125rem);
    }

    .slider.timeline:hover {
        --thumb-size: 2;
        height: calc(var(--thumb-size) * 0.25rem);
        margin-top: 0rem;
        margin-bottom: 0rem;
        border-radius: 1px;
    }

    /* WebKit (Chrome, Safari) */
    .slider::-webkit-slider-thumb {
        transition: all 200ms ease-in-out;
        appearance: none;
        border: 0;
        background: var(--thumb-color);
        border-radius: var(--thumb-rounded);
        width: calc(var(--thumb-size) * 0.25rem);
        height: calc(var(--thumb-size) * 0.25rem);
        box-shadow: -995px 0 0 992px var(--progress-color);
    }

    .slider.timeline::-webkit-slider-thumb,
    .slider.timeline::-moz-range-thumb {
        box-shadow: -995px 0 0 993px var(--progress-color);
    }

    .slider.timeline:hover::-webkit-slider-thumb,
    .slider.timeline:hover::-moz-range-thumb {
        box-shadow: -995px 0 0 991px var(--progress-color);
    }

    .slider::-webkit-slider-runnable-track {
        background: linear-gradient(
            to right,
            var(--buffer-color) 0%,

            var(--buffer-color) calc(var(--buffer, 0) * 1%),
            rgba(0, 0, 0, 0) calc(var(--buffer, 0) * 1%),
            rgba(0, 0, 0, 0) 100%
        );
    }

    /* Firefox */
    .slider::-moz-range-thumb {
        transition: all 200ms ease-in-out;
        appearance: none;
        border: 0;
        background: var(--thumb-color);
        border-radius: var(--thumb-rounded);
        width: calc(var(--thumb-size) * 0.25rem);
        height: calc(var(--thumb-size) * 0.25rem);
        box-shadow: -995px 0 0 992px var(--progress-color);
    }

    .slider::-moz-range-track {
        background: linear-gradient(
            to right,

            var(--buffer-color) 0%,
            var(--buffer-color) calc(var(--buffer, 0) * 1%),
            transparent calc(var(--buffer, 0) * 1%),
            transparent 100%
        );

        border-radius: var(--track-rounded);
        height: calc(var(--thumb-size) * 0.25rem);
        transition: all 200ms ease-in-out;
    }

    .slider::-moz-range-progress {
        transition: all 200ms ease-in-out;

        background: transparent;
        height: calc(var(--thumb-size) * 0.25rem);
    }

    .data-card {
        @apply bg-surface-2 hover:bg-surface-3 dark:hover:bg-primary-dark-600 dark:bg-surface-2/70;
        content-visibility: auto;
        contain-intrinsic-size: auto 76px;
    }

    .content-auto {
        content-visibility: auto;
        contain-intrinsic-size: auto 64px;
    }

    .content-visible {
        content-visibility: visible;
    }

    .button-base {
        @apply focus:bg-surface-3 hover:bg-surface-3;
    }

    .suspense {
        @apply bg-foreground-2/50 animate-pulse;
    }

    .suspense-rounded {
        @apply bg-foreground-2/50 my-auto animate-pulse rounded-full;
    }

    main {
        --height-gap-3: calc(var(--spacing) * 3) /* 0.75rem = 12px */;
        --height-p-6: calc(var(--spacing) * 6 * 2) /* 1.5rem * 2 = 48px */;
        --height-p-3: calc(var(--spacing) * 3 * 2) /* 0.75rem * 2 = 24px */;
        --height-header: 49px;
        --min-page-height-derived: calc(100vh - var(--height-p-6) - var(--height-p-3) - var(--height-gap-3) - var(--height-header));
    }

    .page-height {
        min-height: calc(var(--min-page-height-derived) - calc(var(--height-p-3) / 2));
    }
    .full-height-sidebar {
        /* @lg */
        @media (width >= 64rem /* 1024px */) {
            min-height: var(--min-page-height-derived);
        }
    }

    .clamped-sidebar {
        /* @lg */
        @media (width >= 64rem /* 1024px */) {
            max-height: var(--min-page-height-derived);
        }
    }

    .hover-text-primary {
        @apply hover:text-primary dark:hover:text-primary-muted;
    }

    /* layouts/LayoutBase.vue */
    .layout-card {
        @apply bg-surface-1 h-fit ring-gray-900/5 sm:rounded-2xl sm:shadow-xl sm:ring-1;
    }

    .layout-page {
        @apply bg-surface-1 sm:bg-surface-0 xms:px-4 text-foreground-0 p-3 antialiased sm:p-6;
    }
}

